# pulsecare-backend

./: .gitignore  README.md  pulsecare.db  pyproject.toml  requirements.txt
app/: main.py
app/ai/: __init__.py  feature_engineering.py  tensorflow_adapter.py  training.py
app/api/: ai.py  auth.py  wellbeing.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  training_run.py  user.py  wellbeing.py
app/schemas/: __init__.py  ai.py  auth.py  label.py  wellbeing.py
app/services/: __init__.py  deletion_service.py  label_service.py  wellbeing_service.py
artifacts/: risk_model.pkl
scripts/: delete_records.py  delete_synthetic_data.py  reset_database.py  seed_synthetic_data.py  train_and_validate_synthetic.py  train_validation_report_20260528T210818Z.md  train_validation_report_20260528T213801Z.md
