[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsecare-backend"
version = "0.1.0"
description = "FastAPI backend for PulseCare"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "sqlalchemy",
  "python-dotenv",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "email-validator",
]
